# sIArena

./: .gitignore  README.md  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py  test_results.csv
.github/workflows/: docs.yml  install.yml
apps/autograder/: Dockerfile  README.md  autograder.ipynb  autograder.py
docs/: conf.py  index.rst  requirements.txt
docs/resources/scripts/: tutorial.py
docs/rst/: index.rst  titlepage.rst
docs/rst/appendixes/: glossary.rst
docs/rst/elements/: coordinate.rst  elements.rst  plotting.rst  terrain.rst
docs/rst/getting_started/: autograder.rst  installation.rst  tldr.rst  tutorial.rst
docs/rst/modules/: elements.rst  generation.rst  grading.rst  measure.rst  plotting.rst
docs/spelling/: spelling_wordlist.txt
docs/src/: getting_started.rst  installation.rst  titlepage.rst  tldr.rst  tutorial.rst
docs/src/elements/: elements.rst  generation.rst  measure.rst
resources/: a_star.py  measurement_template.ipynb  show_grader_function_results.ipynb  show_grader_terrains.ipynb
resources/exercises/: IA_exam_practica_2.ipynb  IA_practica_0.ipynb  IA_practica_0_test.ipynb  IA_practica_1.ipynb  IA_practica_2.ipynb  IA_practica_3.ipynb
resources/exercises/solutions/: IA_exam_practica_2_solved.ipynb
resources/graders/: IA_exam_practica_2.yaml  IA_practica_0.yaml  IA_practica_1.yaml  IA_practica_2.yaml  IA_practica_3.yaml
src/IArena_searching/utils/: Timer.py
src/sIArena/grading/: __init__.py  batch.py  config.py  evaluation.py  models.py  (+2 more)
test/: test_imports.py
tests/sIArena/: test_sIArena_init.py
(+55 files in other folders)
