[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sIArena"
version = "0.0"
description = "IArena searching"
authors = [
    { name = "jparisu", email = "javier.paris.u@gmail.com" },
]
urls = { Homepage = "https://github.com/jparisu/sIArena" }
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
